# nyl

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md  build.bat  build.ps1  build.sh  cmake-generate-vs22.bat  conan-get-dependencies.bat  imgui.ini  nyl.sln  premake5.lua
.github/workflows/: cmake-single-platform.yml
Antares/: Antares.h
Antares/header/: Antares.h
Antares/source/: Antares.cpp
Nyl/: Nyl.aps  Nyl.h  Nyl.vcxproj  Nyl.vcxproj.filters  RCa17800  README.md  Shader.h  core.vcxproj  core.vcxproj.filters  resource.h
Nyl/Shaders/: debug.frag
Nyl/header/: Application.h  Collider.h  Core.h  EBO.h  EntityManager.h  EntryPoint.h  Game.h  GameObject.h  IGAME.h  Input.h  Log.h  Physics.h  Renderer.h  Shader.h  Texture.h  Utils.h  VAO.h  VBO.h  Window.h  nyl_window.h
Nyl/source/: Application.cpp  Collider.cpp  EBO.cpp  EntityManager.cpp  Game.cpp  GameObject.cpp  Input.cpp  Log.cpp  Physics.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Window.cpp  nyl_window.cpp
NylEngine/: Animation.cpp  Animation.h  NylEngine.cpp  NylEngine.vcxproj  NylEngine.vcxproj.filters  Player.cpp  Player.h
NylEngine/Debug/: NylEngine.exe.recipe  NylEngine.ilk  vc143.idb
NylEngine/Debug/NylEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NylEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NylEngine/Release/: NylEngine.exe.recipe  NylEngine.iobj  NylEngine.ipdb
NylEngine/Release/NylEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NylEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NylEngine/x64/Debug/: vc143.idb
NylEngine/x64/Debug/NylEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NylEngine.lastbuildstate
NylEngine/x64/Release/: NylEngine.exe.recipe
NylEngine/x64/Release/NylEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NylEngine.lastbuildstate
antares/: antares.vcxproj
antares/source/: SandboxApp.cpp
docs/: gdd.docx
engine/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
engine/resources/backgrounds/: cloud_idle.json
engine/resources/levels/: level1.txt
engine/resources/shaders/: debug.vert  sprite.vert
engine/src/: nyl.h
engine/src/_core/: GameObject.cpp  GameObject.h  application.cpp  application.h  core.h  core_application.h  core_game.cpp  core_game.h  core_input.h  core_log.h  game.cpp  game.h  input.cpp  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  main.h  nyl.h  resource_manager.cpp  resource_manager.h  utils.cpp  utils.h  window.cpp  window.h
engine/src/component/: animation.cpp  animation.h  camera.h  collider.h  component_render.h  component_shader.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  tilemap.cpp  tilemap.h  transform.h
engine/src/entity/: entity.cpp  entity.h  entity_manager.h  player_entity.cpp  player_entity.h
engine/src/event_system/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h
engine/src/system/: system_camera.cpp  system_camera.h  system_collider.cpp  system_collider.h  system_physics.cpp  system_physics.h  system_renderer.cpp  system_renderer.h  system_shader.cpp  system_shader.h
examples/Antares/: CMakeLists.txt
examples/Antares/header/: Antares.h
examples/Antares/source/: Antares.cpp
examples/platformer/: CMakeLists.txt
examples/platformer/header/: platformer.h
examples/platformer/source/: platformer.cpp
include/glad/: glad.h
nyl/engine/_core/: Config.h  core_application.cpp  core_game.cpp  core_game.h  core_input.cpp  core_log.cpp  core_main.h  nyl.h  resource_manager.cpp
nyl/engine/component/: component.h  component_camera.h  component_collider.h  component_physics.h  component_shader.h  component_texture.cpp  component_texture.h  component_transform.h
nyl/engine/entity/: entity.h  entity_manager.h
nyl/engine/system/: system.h  system_camera.cpp  system_collider.cpp  system_collider.h  system_physics.cpp  system_physics.h  system_renderer.cpp  system_renderer.h  system_shader.h
nyl/resources/backgrounds/: lv1.ase  lv1.aseprite  lv1.json
nyl/resources/characters/: ghoul.aseprite
